--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,5 +1,5 @@
 ---
-greetings: "Hello"
+greetings: "Hello, Im Dzun"
 icon: "waving-hand.png"
 title: "I'm a Gatsby Starter"
 subtitlePrefix: "I create awesome "
