--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Issues?"
-name: "Gatsby Starter Portfolio Minimal"
-email: "mail@example.com"
+title: "Contact Me"
+name: "Dzun Nurroin"
+email: "nurroinz@gmail.com"
 profileImage: "../../favicon.png"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
-If you have any problems with this starter, create an issue in the <a href="https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub repository</Underlining></a>.
+Feel free to reach out to me at any time, I am always interested in new stuff!
