--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,9 +1,10 @@
 ---
-greetings: "Hello, Im Dzun"
+greetings: "Hello"
 icon: "waving-hand.png"
-title: "I'm a Gatsby Starter"
-subtitlePrefix: "I create awesome "
-subtitle: "one-page portfolios"
+title: "I'm Dzun Nurroin"
+subtitlePrefix: ""
+subtitle: ""
 ---
 
-A modern portfolio with a minimalistic design.
+Frontend engineer and UI/UX designer. <span style="color:yellow; font-weight: bold;;">[CommIT Dev](https://github.com/commitunuja)</span> core organizer, Full Time IT Support,
+and occasional <span style="color:yellow; font-weight: bold;">[open sourcerer.](https://github.com/DzunN86/)</span>
