update projects section

--- a/content/index/projects/projects.mdx
+++ b/content/index/projects/projects.mdx
@@ -3,6 +3,6 @@ title: "Detailed Features"
 visible: true
 position: 0
 buttonVisible: true
-buttonText: "Visit Project on GitHub"
-buttonUrl: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
+buttonText: "Visit More Projects on GitHub"
+buttonUrl: "https://github.com/DzunN86"
 ---
