edit button project

--- a/content/index/projects/projects.mdx
+++ b/content/index/projects/projects.mdx
@@ -3,6 +3,6 @@ title: "Detailed Features"
 visible: true
 position: 0
 buttonVisible: true
-buttonText: "Visit More Projects on GitHub"
+buttonText: "Visit Projects on GitHub"
 buttonUrl: "https://github.com/DzunN86"
 ---
