--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -6,5 +6,5 @@ subtitlePrefix: ""
 subtitle: ""
 ---
 
-Frontend engineer and UI/UX designer. <span style="color:yellow; font-weight: bold;;">[CommIT Dev](https://github.com/commitunuja)</span> core organizer, Full Time IT Support,
-and occasional <span style="color:yellow; font-weight: bold;">[open sourcerer.](https://github.com/DzunN86/)</span>
+Frontend engineer and UI/UX designer. <span style="color:#FDC830; font-weight: bold;;">[CommIT Dev](https://github.com/commitunuja)</span> core organizer, Full Time IT Support,
+and occasional <span style="color:#FDC830; font-weight: bold;">[open sourcerer.](https://github.com/DzunN86/)</span>
