--- a/data/blog/text-post.mdx
+++ b/data/blog/text-post.mdx
@@ -3,7 +3,7 @@ title: "Testing API Calls in useEffect using React Testing Library and Jest"
 publishedAt: "2021-02-22"
 tags: ['markdown', 'code', 'features', 'react']
 category: React
-summary: "this is the summary our blog post! this is the summary our blog post! this is the summary our blog post! this is the summary our blog post!"
+summary: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque id deserunt nisi autem dolor esse aliquam ipsum consequatur molestias earum"
 ---
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque id deserunt nisi autem dolor esse aliquam ipsum consequatur molestias earum, mollitia quae vero non soluta quod in repellat. Ab, maxime?
 ## TOPIC NAME
